--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "browser-sync": "^2.29.1",
         "chokidar-cli": "^3.0.0",
         "focus-visible": "^5.2.0",
+        "gutenberg-css": "^0.7.0",
         "modern-css-reset": "^1.4.0",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.23",
